# vibe-crafter

./: .gitignore  LICENSE  README.md
.vibecrafter/: instructions.md  start.sh
.vibecrafter/common/: hexagonal.md
.vibecrafter/designs/: vercel.md  (+1 more)
.vibecrafter/generator/: Makefile  instructions.md  main.py  pyproject.toml  seed.sql  steps.db
.vibecrafter/generator/src/vibecrafter/application/ports/: file_scanner.py  step_repository.py  template_writer.py  user_prompter.py
.vibecrafter/generator/src/vibecrafter/application/use_cases/: render_template.py  run_wizard.py
.vibecrafter/generator/src/vibecrafter/domain/exceptions/: wizard_error.py
.vibecrafter/generator/src/vibecrafter/domain/models/: option_source.py  step.py  step_result.py  step_type.py  wizard_session.py
.vibecrafter/generator/src/vibecrafter/infrastructure/config/: dependencies.py  wizard_runner.py
.vibecrafter/generator/src/vibecrafter/infrastructure/prompters/: console_prompter.py
.vibecrafter/generator/src/vibecrafter/infrastructure/repositories/: file_scanner_impl.py  sqlite_step_repository.py
.vibecrafter/generator/src/vibecrafter/infrastructure/writers/: file_template_writer.py
.vibecrafter/generator/tests/: conftest.py
.vibecrafter/generator/tests/application/: test_render_template.py  test_run_wizard.py
.vibecrafter/generator/tests/domain/: test_option_source.py  test_step.py  test_step_result.py  test_step_type.py  test_wizard_session.py
.vibecrafter/generator/tests/infrastructure/: test_file_scanner_impl.py  test_file_template_writer.py  test_sqlite_step_repository.py
(+26 files in other folders)
