[tool.poetry]
name = "vibecrafter"
version = "0.1.0"
description = "Interactive wizard to generate project.md files driven by SQLite steps"
packages = [{include = "vibecrafter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
